# RL_for_Playing_Football

./: 1562601682savefile_1562601686  CMakeLists.txt  Makefile  Makefile~  README.md  main.cu
BP/: Makefile  bullet.cpp  bullet.h  enemy.cpp  enemy.h  game.cpp  game.h  health.cpp  health.h  main.cpp  main.cpp.autosave  mainwindow.ui  player.cpp  player.h  res.qrc  score.cpp  score.h  tutorial.pro  tutorial.pro.user.3b11ee3
BP/Interaction_Handler/: interactionhandler.cpp  interactionhandler.h
BP/Player/: #qlearningplayer.h#  .#qlearningplayer.h  a.out  dqn.cpp  dqn.cpp.autosave  dqn.h  dqn.h.autosave  mlpq.cpp  mlpq.h  player.cpp  player.h  qlearningplayer.cpp  qlearningplayer.h  qv.cpp  qv.h  randomplayer.cpp  randomplayer.h  tabularq.cpp  tabularq.h
BP/Util/: cnn.cpp  cnn.h  neural_network.cpp  neural_network.h  util_functions.cpp  util_functions.h
BP/View/: view.cpp  view.h  view2.cpp  view2.h
BP/World/: #world.cpp#  world.cpp  world.h
bachelorProject/: CMakeLists.txt  controller.cpp  controller.h  gridWorld.cpp  gridWorld.h  main.cpp  observable.h  observer.h  player.cpp  player.h  team.cpp  team.h  view.cpp  view.h  world.cpp  world.h
build-tutorial-Desktop-Debug/: Makefile  moc_gridworldview.cpp  moc_gridworldview_agent.cpp  moc_gridworldview_ball.cpp  qrc_res.cpp  tutorial  ui_mainwindow.h
build-tutorial-Desktop_Qt_5_12_2_GCC_64bit-Debug/: Makefile  moc_agent.cpp  moc_ball.cpp  moc_bullet.cpp  moc_enemy.cpp  moc_gridworldview.cpp  moc_gridworldview_agent.cpp  moc_gridworldview_ball.cpp  moc_mainwindow.cpp  moc_player.cpp  qrc_res.cpp
(+76 files in other folders)
